updated partners tab

--- a/brocade.html
+++ b/brocade.html
@@ -241,6 +241,7 @@
 									<ul class="social">
 										<li><a class="icon fa-facebook" href="https://www.facebook.com/YISPL/"><span class="label">Facebook</span></a></li>
 										<li><a class="icon fa-linkedin" href="https://www.linkedin.com/company/yashasvi-information-solutions-pvt-ltd/?originalSubdomain=in"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon fa-twitter" href="https://twitter.com/yashasvi_info"><span class="label">LinkedIn</span></a></li>
 									</ul>
 									<ul class="contact">
 										<li>
@@ -272,7 +273,7 @@
 
 								<div id="copyright">
 									<ul class="links">
-										<li>&copy; Untitled. All rights reserved.</li><li><a href="#">Yashasvi Information Solutions</a></li>
+										<li>&copy; All rights reserved.</li><li><a href="#">Yashasvi Information Solutions</a></li>
 									</ul>
 								</div>
 							</div>
