--- a/products.html
+++ b/products.html
@@ -20,7 +20,6 @@
 				<section id="header" class="main-header">
 					<div class="index-des">
 						<img id="logo" src="images/main-logo.jpg" alt="yashasvi logo" width="360" height="230" />
-						<!-- <img src="images/brush-stroke3.png" alt="brush stroke" width="100%" height="300" /> -->
 					</div>
 						<h1 style="font-size: 60px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
 						<h3><b><i>Let's simplify..</i></b></h3>
@@ -67,10 +66,11 @@
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/rack-servers.svg" alt="Dell-EMC" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="dell-emc.html" target="_blank">Dell-EMC</a></b></h3>
+															<h3><b><a href="dell-emc.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/rack-servers.svg" alt="Dell-EMC" /><br>
+																Dell-EMC</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -79,10 +79,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/backup-recovery.svg" alt="Veritas" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="veritas.html" target="_blank">Veritas</a></b></h3>
+															<h3><b><a href="veritas.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/backup-recovery.svg" alt="Veritas" /><br>
+																Veritas</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -91,10 +92,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/increasing-stocks-graphic.svg" alt="IBM" /><br>
 													<header>
 														<div class="center">
-														<h3><b><a href="ibm.html" target="_blank">IBM</a></b></h3>
+														<h3><b><a href="ibm.html" target="_blank">
+															<img class="portfolio-images" width="200" height="200" src="images/increasing-stocks-graphic.svg" alt="IBM" /><br>
+															IBM</a></b></h3>
 													</div>
 														<br>
 													</header>
@@ -103,10 +105,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/cloud-db.svg" alt="NetApp" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="netapp.html" target="_blank">NetApp</a></b></h3>
+															<h3><b><a href="netapp.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/cloud-db.svg" alt="NetApp" /><br>
+																NetApp</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -115,10 +118,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/code-terminal.svg" alt="American Megatrends" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="american-megatrends.html" target="_blank">American Megatrends</a></b></h3>
+															<h3><b><a href="american-megatrends.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/code-terminal.svg" alt="American Megatrends" /><br>
+																American Megatrends</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -127,10 +131,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/cloud-security.svg" alt="Hitachi" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="hitachi.html" target="_blank">Hitachi</a></b></h3>
+															<h3><b><a href="hitachi.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/cloud-security.svg" alt="Hitachi" /><br>
+																Hitachi</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -139,10 +144,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/antivirus.svg" alt="Symantec" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="symantec.html" target="_blank">Symantec</a></b></h3>
+															<h3><b><a href="symantec.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/antivirus.svg" alt="Symantec" /><br>
+																Symantec</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -151,10 +157,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/router.svg" alt="HP Enterprise" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="hpe.html" target="_blank">HP Enterprise</a></b></h3>
+															<h3><b><a href="hpe.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/router.svg" alt="HP Enterprise" /><br>
+																HP Enterprise</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -163,10 +170,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/server-check.svg" alt="Acronis" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="acronis.html" target="_blank">Acronis</a></b></h3>
+															<h3><b><a href="acronis.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/server-check.svg" alt="Acronis" /><br>
+																Acronis</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -175,10 +183,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/cloud-network.svg" alt="Brocade" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="brocade.html" target="_blank">Brocade</a></b></h3>
+															<h3><b><a href="brocade.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/cloud-network.svg" alt="Brocade" /><br>
+																Brocade</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -187,10 +196,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/email-authentication.svg" alt="Entrust Datacard" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="entrust-datacard.html">Entrust Datacard</a></b></h3>
+															<h3><b><a href="entrust-datacard.html">
+																<img class="portfolio-images" width="200" height="200" src="images/email-authentication.svg" alt="Entrust Datacard" /><br>
+																Entrust Datacard</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -199,10 +209,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/firewall.svg" alt="Sophos" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="sophos.html" target="_blank">Sophos</a></b></h3>
+															<h3><b><a href="sophos.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/firewall.svg" alt="Sophos" /><br>
+																Sophos</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -211,10 +222,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/cloud-security.svg" alt="InstaSafe" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="instasafe.html" target="_blank">InstaSafe</a></b></h3>
+															<h3><b><a href="instasafe.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/cloud-security.svg" alt="InstaSafe" /><br>
+																InstaSafe</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -223,10 +235,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/smartphone.svg" alt="Riverbed" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="riverbed.html" target="_blank">Riverbed</a></b></h3>
+															<h3><b><a href="riverbed.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/smartphone.svg" alt="Riverbed" /><br>
+																Riverbed</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -235,10 +248,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/save-outlined-diskette.svg" alt="Seclore" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="seclore.html" target="_blank">Seclore</a></b></h3>
+															<h3><b><a href="seclore.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/save-outlined-diskette.svg" alt="Seclore" /><br>
+																Seclore</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -247,10 +261,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/linux-logo.svg" alt="RedHat" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="redhat.html" target="_blank">RedHat</a></b></h3>
+															<h3><b><a href="redhat.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/linux-logo.svg" alt="RedHat" /><br>
+																RedHat</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -259,10 +274,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/videocall.svg" alt="VMware" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="vmware.html" target="_blank">VMware</a></b></h3>
+															<h3><b><a href="vmware.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/videocall.svg" alt="VMware" /><br>
+																VMware</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -271,10 +287,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/computer-screen-linux.svg" alt="Suse" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="suse.html" target="_blank">Suse</a></b></h3>
+															<h3><b><a href="suse.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/computer-screen-linux.svg" alt="Suse" /><br>
+																Suse</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -283,10 +300,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/networking.svg" alt="Cisco" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="cisco.html" target="_blank">Cisco</a></b></h3>
+															<h3><b><a href="cisco.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/networking.svg" alt="Cisco" /><br>
+																Cisco</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -295,10 +313,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/videoconf.svg" alt="Polycom" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="polycom.html" target="_blank">Polycom</a></b></h3>
+															<h3><b><a href="polycom.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/videoconf.svg" alt="Polycom" /><br>
+																Polycom</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -307,10 +326,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/microsoft-windows-logo.svg" alt="Microsoft" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="microsoft.html" target="_blank">Microsoft</a></b></h3>
+															<h3><b><a href="microsoft.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/microsoft-windows-logo.svg" alt="Microsoft" /><br>
+																Microsoft</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -319,10 +339,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/mac.svg" alt="Apple" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="apple.html" target="_blank">Apple</a></b></h3>
+															<h3><b><a href="apple.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/mac.svg" alt="Apple" /><br>
+																Apple</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -331,10 +352,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/jar.svg" alt="Oracle" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="oracle.html" target="_blank">Oracle</a></b></h3>
+															<h3><b><a href="oracle.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/jar.svg" alt="Oracle" /><br>
+																Oracle</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -343,10 +365,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/aws-big-logo.svg" alt="AWS" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="aws.html" target="_blank">AWS</a></b></h3>
+															<h3><b><a href="aws.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/aws-big-logo.svg" alt="AWS" /><br>
+																AWS</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -355,10 +378,11 @@
 
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/pc-tower-and-monitor.svg" alt="Lenovo" /><br>
 													<header>
 														<div class="center">
-															<h3><b><a href="lenovo.html" target="_blank">Lenovo</a></b></h3>
+															<h3><b><a href="lenovo.html" target="_blank">
+																<img class="portfolio-images" width="200" height="200" src="images/pc-tower-and-monitor.svg" alt="Lenovo" /><br>
+																Lenovo</a></b></h3>
 														</div>
 														<br>
 													</header>
@@ -427,6 +451,7 @@
 									<ul class="social">
 										<li><a class="icon fa-facebook" href="https://www.facebook.com/YISPL/"><span class="label">Facebook</span></a></li>
 										<li><a class="icon fa-linkedin" href="https://www.linkedin.com/company/yashasvi-information-solutions-pvt-ltd/?originalSubdomain=in"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon fa-twitter" href="https://twitter.com/yashasvi_info"><span class="label">LinkedIn</span></a></li>
 									</ul>
 									<ul class="contact">
 										<li>
@@ -458,7 +483,7 @@
 
 								<div id="copyright">
 									<ul class="links">
-										<li>&copy; Untitled. All rights reserved.</li><li><a href="#">Yashasvi Information Solutions</a></li>
+										<li>&copy; All rights reserved.</li><li><a href="#">Yashasvi Information Solutions</a></li>
 									</ul>
 								</div>
 							</div>
