--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
 								<div id="copyright">
 									<ul class="links">
-										<li>&copy; Untitled. All rights reserved.</li><li><a href="#">Yashasvi Information Solutions</a></li>
+										<li>&copy; All rights reserved.</li><li><a href="#">Yashasvi Information Solutions</a></li>
 									</ul>
 								</div>
 							</div>
