--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 											<br>
 										</header>
 										<p class="left"><b>Yashasvi’s vision is to be one of the formidable names in IT Infrastructure consulting.
-											To provide quality of service and enable customers adopt “technology for business sake” that brings in direct business benefits.</b></p>
+											To provide quality of service and enable customers to adopt “technology for business sake” that brings in direct business benefits.</b></p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
