changed maps and hpe

--- a/hpe.html
+++ b/hpe.html
@@ -10,7 +10,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/router.svg" alt="HP Enterprise - Yashasvi" />
+				<img class="portfolio-images" width="200" height="200" src="images/data-storage-cabinet.svg" alt="HP Enterprise - Yashasvi" />
 					<h1><a href="#"><b>HP Enterprise</b></a></h1>
 					<nav id="nav">
 						<ul>
