--- a/products.html
+++ b/products.html
@@ -160,7 +160,7 @@
 													<header>
 														<div class="center">
 															<h3><b><a href="hpe.html" target="_blank">
-																<img class="portfolio-images" width="200" height="200" src="images/router.svg" alt="HP Enterprise" /><br>
+																<img class="portfolio-images" width="200" height="200" src="images/data-storage-cabinet.svg" alt="HP Enterprise" /><br>
 																HP Enterprise</a></b></h3>
 														</div>
 														<br>
