--- a/maps.html
+++ b/maps.html
@@ -9,6 +9,16 @@
         width: 100%;  /* The width is the width of the web page */
         }
     </style>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121649854-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-121649854-1');
+    </script>
 </head>
 <body>
     <h3>My Google Maps Demo</h3>
