--- a/products.html
+++ b/products.html
@@ -13,6 +13,16 @@
 		<link rel="stylesheet" href="assets/css/flickity-responsive.css" />
 
 		<script src="assets/js/flickity.pkgd.min.js"></script>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121649854-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-121649854-1');
+		</script>
 	</head>
 
 	<body class="homepage is-preload">
