--- a/cloud-consulting.html
+++ b/cloud-consulting.html
@@ -20,7 +20,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="index-images" width="400" height="400" src="images/services/cloud-main.jpg" alt="Cloud Consulting" />
+				<img class="index-images" width="400" height="400" src="images/services/cloud-consulting.jpg" alt="Cloud Consulting" />
 					<h1><a href="#"><b>Cloud Consulting</b></a></h1>
 					<nav id="nav">
 						<ul>
@@ -60,16 +60,17 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Architecture and Design Services</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Architecture and Design Services</b></h3>
 										</header>
 										<p>
-											This service offering can help streamline majority of intricacy involved in catering to Cloud needs and hence
-											reducing costs. With the growing importance on digital transformation, many IT departments are trying to transform
-											their legacy environments to better efficiency and improve productivity.
+											This service offering can help streamline majority of intricacy involved in catering to Cloud needs and hence reducing costs.
+											With the growing importance on digital transformation, many IT departments are trying to transform their legacy environments to
+											better efficiency and improve productivity with cost-benifits. Assessments will include the assessing application landscape and
+											dependencies both upstream and downstream.
 										</p>
 										<p>
-											Design and Build cloud adoption roadmap and define a customized business service catalog together with deployment
-											options based on the unique needs of the enterprise. As part of this service the following areas of Cloud is addressed which includes:
+											Design and Build cloud adoption roadmap and define a customized business service catalog together with deployment options based on
+											the unique needs of the enterprise. As part of this service the following areas of cloud is addressed which includes:
 										</p>
 										<ul>
 											<li>Readiness Assessment</li>
@@ -82,7 +83,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Cloud Readiness Consulting Services</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Cloud Readiness Consulting</b></h3>
 										</header>
 										<p>
 											Cloud assessment is a comprehensive review of overall Cloud transformation to keep pace with cloud growth.
@@ -108,7 +109,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Implementation & Migration Services</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Cloud Implementation & Migration Services</b></h3>
 										</header>
 										<p>
 											Yashasvi helps you establish and migrate to a cloud foundation for the delivery of elastic, self-service infrastructure
@@ -127,6 +128,18 @@
 												<li>Hybrid Cloud</li>
 											</ol>
 										</ul>
+									</section>
+									<section>
+										<header>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Business Continuity Analysis and Recovery Plan</b></h3>
+										</header>
+										<p>
+											Business Continuity (BC) management is a service that provides a framework to ensure the resilience of your business to any eventuality.
+											Unplanned downtimes can be exorbitantly impact the brand and business. Business continuity service includes the analysis of the business
+											drivers, understanding critical business functions, recovery objectives, prioritization of the inoperative business function.
+											The business continuity analysis of internal and external dependencies. Create Business Continuity plan to recover based on RTO and RPO
+											of various business units. We provide the recovery management services for Disaster Recovery.
+										</p>
 									</section>
 								</article>
 							</div>
