--- a/cyber-security-solutions.html
+++ b/cyber-security-solutions.html
@@ -20,7 +20,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="index-images" width="200" height="200" src="images/data-protection.svg" alt="Cyber Security Solutions" />
+				<img class="index-images" width="400" height="400" src="images/solutions/cyber-security.jpg" alt="Cyber Security Solutions" />
 					<h1><a href="#"><b>Cyber Security Solutions</b></a></h1>
 					<nav id="nav">
 						<ul>
