--- a/data-center-consulting.html
+++ b/data-center-consulting.html
@@ -20,7 +20,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="index-images" width="400" height="400" src="images/services/data-center-consulting-main.jpg" alt="Data Center Consulting" />
+				<img class="index-images" width="400" height="400" src="images/services/data-center-consulting.jpg" alt="Data Center Consulting" />
 					<h1><a href="#"><b>Data Center Consulting</b></a></h1>
 
 					<nav id="nav">
@@ -60,59 +60,41 @@
 							<div class="col-8 col-12-medium">
 								<article class="box post">
 									<header>
-										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Introduction</b></h3>
+										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Introduction</b></h3>
 									</header>
 									<p>
-										Data Center consulting are services focused towards optimizing Data Centre elements.
-										Yashasvi follows an innovative approach in Data Centre design, assessment, migration and consolidation.
+										Data Center consulting are services focused towards optimizing Data Center elements.
+										Yashasvi follows an innovative approach in Data Center design, assessment, consolidation and relocation.
 										Our Accelerate methodology will facilitate design sessions, quickly driving your team to a detailed plan and
 										accelerating the completion of your design, consolidation and relocation.
 									</p>
-									</p>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Centre Design and Assessment</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Data Center Design and Assessment</b></h3>
 										</header>
 										<p>
-											Yashasvi follows a structured and modular approach in Data Centre Design, yet keeping the design as simple as
-											possible. Based on the customer business requirement a blue print of the new Data Centre will be provided which
-											incorporates the latest Data Centre standards. The design will incorporate the following aspects which includes
-										</p>
-										<ul>
-											<li>Sizing (Power, Cooling, Rack configuration, Fire suppression, Cabling layout)</li>
-											<li>Scalability for future growth</li>
-											<li>Redundancy (Based on tiers)</li>
-											<li>Physical security</li>
-											<li>Optimization using green technologies</li>
-										</ul>
-										<p>Data Centre assessment involves reviewing the readiness of existing Data Centre facility and critical physical
-											infrastructure components – including the Power systems, Cooling systems, and Rack configuration.
+											Yashasvi follows a structured and modular approach in Data Center Design, yet keeping the design as simple as possible.
+											Based on the customer business requirement a blue print of the new Data Center will be provided which incorporates the latest Data Center standards.
+											The design will incorporate the following aspects which includes sizing, scalability, redundancy, physical security and optimization with green technologies.
 										</p>
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Deliverables</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Data Center Consolidation</b></h3>
 										</header>
 										<p>
-											As part of this assessment Yashasvi will develop a comprehensive report that includes recommendations to:
+											Sprawling servers, operating and storage systems, and desktop applications create a costly and complex IT environment. To keep this computer equipment expansion manageable,
+											Data Center consolidation has become an increasingly popular choice for IT professionals. Data Center consolidation can help your company get the most from its resources by
+											reducing costs, elevating service levels and improving IT manageability. Data Center consolidation brings the benefits of the Hybrid and Public Cloud service to Data Center.
 										</p>
-										<ul>
-											<li>Address your specific concerns</li>
-											<li>Correct deficiencies</li>
-											<li>Optimize existing conditions</li>
-											<li>Increase infrastructure capabilities</li>
-											<li>xtend Data Centre service life</li>
-										</ul>
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Center Build Out</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Data Centre Relocation</b></h3>
 										</header>
 										<p>
-										As part of the Data Centre Build Out service Yashasvi will ensure the commissioning of the new Data Centre as per the
-										design and architecture. Yashasvi will undertake the program management activities and ensure various phases of the
-										plan are executed on schedule. Yashasvi will liaison with various other groups which includes HVAC, cabling etc and ensure that we
-										act as a single point of contact to the customer.
+											As part of this service we will seamlessly relocate your Data Centre to a new facility through a well-defined process.
+											Various alternatives are assessed and evaluated based on the customer’s requirement.
 										</p>
 									</section>
 								</article>
