--- a/end-user-computing.html
+++ b/end-user-computing.html
@@ -20,7 +20,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="index-images" width="200" height="200" src="images/end-user-issue.svg" alt="End User Computing" />
+				<img class="index-images" width="800" height="400" src="images/services/end-user-computing.jpg" alt="End User Computing" />
 				<h1><a href="#"><b>End User Computing</b></a></h1>
 				<nav id="nav">
 					<ul>
