--- a/it-transformation.html
+++ b/it-transformation.html
@@ -20,7 +20,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="index-images" width="400" height="400" src="images/services/it-transformation-main.jpg" alt="IT Transformation" />
+				<img class="index-images" width="400" height="400" src="images/services/it-transformation.jpg" alt="IT Transformation" />
 					<h1><a href="#"><b>IT Transformation</b></a></h1>
 					<nav id="nav">
 						<ul>
@@ -60,7 +60,7 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; IT Transformation Process</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; IT Transformation Process</b></h3>
 										</header>
 										<p>
 											The objective of this service is to determine the “healthiness of the existing IT environment, recommend
@@ -82,7 +82,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Deliverables:</b></h3>
+											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Deliverables:</b></h3>
 										</header>
 										<p>
 											The final report, at a broad level would consist of:
@@ -100,7 +100,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Center Consolidation</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Data Center Consolidation</b></h3>
 										</header>
 										<p>
 											Sprawling servers, operating and storage systems, and desktop applications create a costly and complex IT environment.
@@ -113,7 +113,7 @@
 											very short period of time.
 										</p>
 										<header>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Deliverables:</b></h3>
+											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Deliverables:</b></h3>
 										</header>
 										<ul>
 											<li>Business case for server consolidation as the first step</li>
@@ -127,7 +127,7 @@
 									<hr>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Center Relocation</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Data Center Relocation</b></h3>
 										</header>
 										<p>
 											As part of this service we will seamlessly relocate your Data Centre to a new facility through a well-defined
@@ -141,7 +141,7 @@
 												This methodology will be suggested for application which cannot tolerate any downtime during relocation.</li>
 										</ul>
 										<header>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Our Approach:</b></h3>
+											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b class="blue">&nbsp; Our Approach:</b></h3>
 										</header>
 										<p>
 											Yashasvi will ensure that the entire relocation exercise is seamless through a range of structured activities which include:
