--- a/network-collab.html
+++ b/network-collab.html
@@ -20,7 +20,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="index-images" width="200" height="200" src="images/server-connection.svg" alt="Data Center Consulting" />
+				<img class="index-images" width="400" height="400" src="images/services/network-collaboration.jpg" alt="Data Center Consulting" />
 					<h1><a href="#"><b>Network and Collaboration</b></a></h1>
 					<nav id="nav">
 						<ul>
