--- a/bcp-dr.html
+++ b/bcp-dr.html
@@ -20,7 +20,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="index-images" width="400" height="400" src="images/services/bcp-dr-1.jpg" alt="Cloud Consulting" />
+				<img class="index-images" width="400" height="400" src="images/services/bcp-dr.jpg" alt="Cloud Consulting" />
 					<h1><a href="#"><b>Business Continuity Planning - Disaster Recovery</b></a></h1>
 					<nav id="nav">
 						<ul>
