--- a/compute-storage-backup.html
+++ b/compute-storage-backup.html
@@ -20,7 +20,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="index-images" width="200" height="200" src="images/cloud.svg" alt="Compute, Storage and Backup" />
+				<img class="index-images" width="400" height="400" src="images/services/compute-storage-backup.jpg" alt="Compute, Storage and Backup" />
 					<h1><a href="#"><b>Compute, Storage and Backup</b></a></h1>
 					<nav id="nav">
 						<ul>
