--- a/data-center-cloud-solutions.html
+++ b/data-center-cloud-solutions.html
@@ -20,7 +20,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="index-images" width="200" height="200" src="images/dc-cloud.svg" alt="Data Center and Cloud Solutions" />
+				<img class="index-images" width="400" height="400" src="images/solutions/dc-cloud-solutions.jpg" alt="Data Center and Cloud Solutions" />
 					<h1><a href="#"><b>Data Center and Cloud Solutions</b></a></h1>
 					<nav id="nav">
 						<ul>
