--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="assets/css/animate.css" />
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/flickity.css">
+		<link rel="stylesheet" href="assets/css/hover.css">
 
 		<link rel="stylesheet" href="assets/css/flickity-responsive.css" />
 
@@ -31,16 +32,14 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 				<section id="header" class="main-header">
-					<!-- <div style="background-color: #f2f3f4;" class="center">
-						<h4><b>Search:</b></h4>
-						<input type="text" />
-					</div> -->
 					<div class="index-des">
 						<img id="logo" src="images/main-logo.jpg" alt="yashasvi logo" width="360" height="230" />
 						<!-- <img src="images/brush-stroke3.png" alt="brush stroke" width="100%" height="300" /> -->
 					</div>
-						<h1 style="font-size: 60px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
+					<div class="header-content">
+						<h1 style="font-size: 50px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
 						<h3><b><i>Let's simplify..</i></b></h3>
+					</div>
 
 						<nav id="nav">
 							<ul>
@@ -138,11 +137,12 @@
 						<div class="row">
 							<div class="col-12">
 									<section>
-										<!-- <header class="major">
-											<h2><b style="color: white;">Our Portfolio</b></h2>
-										</header> -->
+										<header class="major">
+											<h2><b style="color: black;">Our Portfolio</b></h2>
+										</header>
 
 										<div class="row">
+
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box" id="box">
 													<img class="index-images" width="300" height="300" src="images/index/index-1.jpg" alt="Data Center Consulting" /><br>
@@ -152,8 +152,8 @@
 														</div>
 														<br>
 													</header>
-													<p><b>Data center consulting are services focused towards optimizing Data Centre elements.
-														Yashasvi follows an innovative approach in Data Centre design, assessment, migration and consolidation.
+													<p><b>Data center consulting are services focused towards optimizing Data Center elements.
+														Yashasvi follows an innovative approach in Data Center design, assessment, migration and consolidation.
 														Our Accelerate methodology will facilitate design sessions, quickly driving your team to a detailed plan and accelerating the completion of your design, consolidation and relocation.</b></p>
 													<footer>
 														<div class="center">
@@ -164,6 +164,7 @@
 													</footer>
 												</section>
 											</div>
+
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box" id="box">
 													<img class="index-images" width="300" height="300" src="images/index/index-2.jpg" alt="Cloud Consulting" /><br>
@@ -280,7 +281,7 @@
 
 							<div class="col-12">
 								<div class="carousel"
-								data-flickity='{ "imagesLoaded": true, "percentPosition": false, "autoPlay": 3000, "wrapAround": true }'>
+								data-flickity='{ "imagesLoaded": true, "percentPosition": false, "wrapAround": true }'>
 								<div class="carousel-cell">
 									<img src="assets/css/images/partners/dell-emc.jpg" alt="Dell-EMC" />
 								</div>
@@ -309,9 +310,6 @@
 									<img src="assets/css/images/partners/hp.png" alt="HP" />
 								</div>
 								<div class="carousel-cell">
-									<img src="assets/css/images/partners/veritas.jpg" alt="Veritas" />
-								</div>
-								<div class="carousel-cell">
 									<img src="assets/css/images/partners/netapp.png" alt="NetApp" />
 								</div>
 								<div class="carousel-cell">
@@ -333,22 +331,25 @@
 									<img src="assets/css/images/partners/instasafe.png" alt="Instasafe" />
 								</div>
 								<div class="carousel-cell">
+									<img src="assets/css/images/partners/veritas.jpg" alt="Veritas" />
+								</div>
+								<div class="carousel-cell">
 									<img src="assets/css/images/partners/redhat.png" alt="Redhat" />
 								</div>
 								<div class="carousel-cell">
 									<img src="assets/css/images/partners/sophos.jpg" alt="Sophos" />
 								</div>
 								<div class="carousel-cell">
-									<img src="assets/css/images/partners/suse2.png" alt="Suse" />
-								</div>
-								<div class="carousel-cell">
 									<img src="assets/css/images/partners/polycom.png" alt="Polycom" />
 								</div>
 								<div class="carousel-cell">
-									<img src="assets/css/images/partners/apple.png" alt="Apple" />
+									<img src="assets/css/images/partners/lenovo.jpg" alt="Lenovo" />
 								</div>
 								<div class="carousel-cell">
-									<img src="assets/css/images/partners/lenovo.jpg" alt="Lenovo" />
+									<img src="assets/css/images/partners/suse2.png" alt="Suse" />
+								</div>
+								<div class="carousel-cell">
+									<img src="assets/css/images/partners/apple.png" alt="Apple" />
 								</div>
 								<div class="carousel-cell">
 									<img src="assets/css/images/partners/microsoft.jpg" alt="Microsoft" />
@@ -360,14 +361,14 @@
 					</div>
 					</div>
 				</div>
-
 				</section>
-				<section>
+
+				<!-- <section>
 					<div class="blinker">
 						<img src="images/cloud-animate.png" alt="cloud-animation image" height="50" width="50" />
 						<a href="contact.html" class="alert" target="_blank">Click here to get a call back!</a>
 					</div>
-				</section>
+				</section> -->
 
 				<section id="footer">
 					<div class="container">
