--- a/unified-workplace.html
+++ b/unified-workplace.html
@@ -20,7 +20,7 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="index-images" width="200" height="200" src="images/workplace.svg" alt="Unified Workplace" />
+				<img class="index-images" width="400" height="400" src="images/solutions/unified-workplace.jpg" alt="Unified Workplace" />
 					<h1><a href="#"><b>Unified Workplace</b></a></h1>
 					<nav id="nav">
 						<ul>
